TP1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> bloc
Rule 1     bloc -> bloc statement SEMI
Rule 2     bloc -> statement SEMI
Rule 3     statement -> NAME EQUAL expression
Rule 4     statement -> expression
Rule 5     expression -> expression INF expression
Rule 6     expression -> expression SUP expression
Rule 7     expression -> expression AND expression
Rule 8     expression -> expression OR expression
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression DIVIDE expression
Rule 13    expression -> LPAREN expression RPAREN
Rule 14    expression -> NUMBER
Rule 15    expression -> NAME

Terminals, with rules where they appear

AND                  : 7
DIVIDE               : 12
EQUAL                : 3
INF                  : 5
LPAREN               : 13
MINUS                : 11
NAME                 : 3 15
NUMBER               : 14
OR                   : 8
PLUS                 : 9
RPAREN               : 13
SEMI                 : 1 2
SUP                  : 6
TIMES                : 10
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 0
expression           : 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . bloc
    (1) bloc -> . bloc statement SEMI
    (2) bloc -> . statement SEMI
    (3) statement -> . NAME EQUAL expression
    (4) statement -> . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    NAME            shift and go to state 3
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6

    bloc                           shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4

state 1

    (0) S' -> bloc .
    (1) bloc -> bloc . statement SEMI
    (3) statement -> . NAME EQUAL expression
    (4) statement -> . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    NAME            shift and go to state 3
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6

    statement                      shift and go to state 7
    expression                     shift and go to state 4

state 2

    (2) bloc -> statement . SEMI

    SEMI            shift and go to state 8


state 3

    (3) statement -> NAME . EQUAL expression
    (15) expression -> NAME .

    EQUAL           shift and go to state 9
    INF             reduce using rule 15 (expression -> NAME .)
    SUP             reduce using rule 15 (expression -> NAME .)
    AND             reduce using rule 15 (expression -> NAME .)
    OR              reduce using rule 15 (expression -> NAME .)
    PLUS            reduce using rule 15 (expression -> NAME .)
    TIMES           reduce using rule 15 (expression -> NAME .)
    MINUS           reduce using rule 15 (expression -> NAME .)
    DIVIDE          reduce using rule 15 (expression -> NAME .)
    SEMI            reduce using rule 15 (expression -> NAME .)


state 4

    (4) statement -> expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 4 (statement -> expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17


state 5

    (13) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 18

state 6

    (14) expression -> NUMBER .

    INF             reduce using rule 14 (expression -> NUMBER .)
    SUP             reduce using rule 14 (expression -> NUMBER .)
    AND             reduce using rule 14 (expression -> NUMBER .)
    OR              reduce using rule 14 (expression -> NUMBER .)
    PLUS            reduce using rule 14 (expression -> NUMBER .)
    TIMES           reduce using rule 14 (expression -> NUMBER .)
    MINUS           reduce using rule 14 (expression -> NUMBER .)
    DIVIDE          reduce using rule 14 (expression -> NUMBER .)
    SEMI            reduce using rule 14 (expression -> NUMBER .)
    RPAREN          reduce using rule 14 (expression -> NUMBER .)


state 7

    (1) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 20


state 8

    (2) bloc -> statement SEMI .

    NAME            reduce using rule 2 (bloc -> statement SEMI .)
    LPAREN          reduce using rule 2 (bloc -> statement SEMI .)
    NUMBER          reduce using rule 2 (bloc -> statement SEMI .)
    $end            reduce using rule 2 (bloc -> statement SEMI .)


state 9

    (3) statement -> NAME EQUAL . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 21

state 10

    (5) expression -> expression INF . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 22

state 11

    (6) expression -> expression SUP . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 23

state 12

    (7) expression -> expression AND . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 24

state 13

    (8) expression -> expression OR . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 25

state 14

    (9) expression -> expression PLUS . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 26

state 15

    (10) expression -> expression TIMES . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 27

state 16

    (11) expression -> expression MINUS . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 28

state 17

    (12) expression -> expression DIVIDE . expression
    (5) expression -> . expression INF expression
    (6) expression -> . expression SUP expression
    (7) expression -> . expression AND expression
    (8) expression -> . expression OR expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . NUMBER
    (15) expression -> . NAME

    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 6
    NAME            shift and go to state 19

    expression                     shift and go to state 29

state 18

    (13) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 30
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17


state 19

    (15) expression -> NAME .

    RPAREN          reduce using rule 15 (expression -> NAME .)
    INF             reduce using rule 15 (expression -> NAME .)
    SUP             reduce using rule 15 (expression -> NAME .)
    AND             reduce using rule 15 (expression -> NAME .)
    OR              reduce using rule 15 (expression -> NAME .)
    PLUS            reduce using rule 15 (expression -> NAME .)
    TIMES           reduce using rule 15 (expression -> NAME .)
    MINUS           reduce using rule 15 (expression -> NAME .)
    DIVIDE          reduce using rule 15 (expression -> NAME .)
    SEMI            reduce using rule 15 (expression -> NAME .)


state 20

    (1) bloc -> bloc statement SEMI .

    NAME            reduce using rule 1 (bloc -> bloc statement SEMI .)
    LPAREN          reduce using rule 1 (bloc -> bloc statement SEMI .)
    NUMBER          reduce using rule 1 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 1 (bloc -> bloc statement SEMI .)


state 21

    (3) statement -> NAME EQUAL expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 3 (statement -> NAME EQUAL expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17


state 22

    (5) expression -> expression INF expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 5 (expression -> expression INF expression .)
    RPAREN          reduce using rule 5 (expression -> expression INF expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! SUP             [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! AND             [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! OR              [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! PLUS            [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! TIMES           [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! MINUS           [ reduce using rule 5 (expression -> expression INF expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression INF expression .) ]


state 23

    (6) expression -> expression SUP expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 6 (expression -> expression SUP expression .)
    RPAREN          reduce using rule 6 (expression -> expression SUP expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! SUP             [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! AND             [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! OR              [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! PLUS            [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! TIMES           [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! MINUS           [ reduce using rule 6 (expression -> expression SUP expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression SUP expression .) ]


state 24

    (7) expression -> expression AND expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 7 (expression -> expression AND expression .)
    RPAREN          reduce using rule 7 (expression -> expression AND expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! SUP             [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! AND             [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! OR              [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! PLUS            [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! TIMES           [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! MINUS           [ reduce using rule 7 (expression -> expression AND expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression AND expression .) ]


state 25

    (8) expression -> expression OR expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 8 (expression -> expression OR expression .)
    RPAREN          reduce using rule 8 (expression -> expression OR expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! SUP             [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! AND             [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! OR              [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! PLUS            [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! TIMES           [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! MINUS           [ reduce using rule 8 (expression -> expression OR expression .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> expression OR expression .) ]


state 26

    (9) expression -> expression PLUS expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 9 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 9 (expression -> expression PLUS expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! SUP             [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! AND             [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! OR              [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! PLUS            [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression PLUS expression .) ]


state 27

    (10) expression -> expression TIMES expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 10 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 10 (expression -> expression TIMES expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! SUP             [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! AND             [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! OR              [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! PLUS            [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! TIMES           [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> expression TIMES expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression TIMES expression .) ]


state 28

    (11) expression -> expression MINUS expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 11 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression MINUS expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! SUP             [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! AND             [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! OR              [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! PLUS            [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression MINUS expression .) ]


state 29

    (12) expression -> expression DIVIDE expression .
    (5) expression -> expression . INF expression
    (6) expression -> expression . SUP expression
    (7) expression -> expression . AND expression
    (8) expression -> expression . OR expression
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for INF resolved as shift
  ! shift/reduce conflict for SUP resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 12 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 12 (expression -> expression DIVIDE expression .)
    INF             shift and go to state 10
    SUP             shift and go to state 11
    AND             shift and go to state 12
    OR              shift and go to state 13
    PLUS            shift and go to state 14
    TIMES           shift and go to state 15
    MINUS           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! INF             [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! SUP             [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! AND             [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! OR              [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! PLUS            [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression DIVIDE expression .) ]


state 30

    (13) expression -> LPAREN expression RPAREN .

    INF             reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    SUP             reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 13 (expression -> LPAREN expression RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for INF in state 22 resolved as shift
WARNING: shift/reduce conflict for SUP in state 22 resolved as shift
WARNING: shift/reduce conflict for AND in state 22 resolved as shift
WARNING: shift/reduce conflict for OR in state 22 resolved as shift
